# HotAir

./: .clang-tidy  CMakeLists.txt  args.hpp  main.cpp
src/: mmappedFile.hpp  platformGfx.hpp  vulkanCommon.hpp  waylandGfx.hpp
tests/: CMakeLists.txt  test-mmapped.cpp
